--- a/app/banco/templates/banco/agencia_adicionar.html
+++ b/app/banco/templates/banco/agencia_adicionar.html
@@ -3,7 +3,7 @@
 {% load static %}
    
 {% block content %}
-<link rel="stylesheet" href="{% static '/css/agencia_banco_add.css' %}">
+<link rel="stylesheet" href="{% static '/css/banco/agencia_banco_add.css' %}">
   <section id="main">
       <h1>Adicione uma agencia</h1>
       
