--- a/app/banco/templates/banco/banco_adicionar.html
+++ b/app/banco/templates/banco/banco_adicionar.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 
 {% block content %}
-    <link rel="stylesheet" href="{% static '/css/agencia_banco_add.css' %}">
+    <link rel="stylesheet" href="{% static '/css/banco/agencia_banco_add.css' %}">
     
 <section id="main">
     <h1>Adicione um banco</h1>
