--- a/app/banco/templates/partials/header.html
+++ b/app/banco/templates/partials/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-<link rel="stylesheet" href="{% static '/css/header.css' %}">
+<link rel="stylesheet" href="{% static '/css/partials/header.css' %}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"> <!-- Referenciar o bootstrap -->
 <link rel="shortcut icon" type='image/x.icon' href="{% static 'img/logo.ico' %}">
 
@@ -8,9 +8,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu-h">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'paginaInicial' %}"><i class="bi bi-house"></i></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        
-      </button>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation"></button>
 
       <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
         <ul class="navbar-nav">
@@ -30,8 +28,9 @@
               <li><a class="dropdown-item" href="{% url 'listarBanco' %}">Banco</a></li>
               <li><a class="dropdown-item" href="{% url 'listarAgencia' %}">Agência</a></li>
             </ul>
+           
       </div>
-      
+      <a class="navbar-brand" href="{% url 'paginaLogin' %}"><i class="bi bi-person"></i></a>
     </div>
   </nav>
 </header>
