--- a/app/banco/templates/usuario/login.html
+++ b/app/banco/templates/usuario/login.html
@@ -1,7 +1,53 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load crispy_forms_tags  %}
 {% block content %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static '/css/usuario/login_cadastro.css' %}">
 
+<section class="vh-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+            <div class="card-body p-5 text-center">
+  
+              <div class="mb-md-5 mt-md-4 pb-5">
+  
+                <h2 class="fw-bold mb-2 text-uppercase">Entrar</h2>
+                <p class="text-white-50 mb-5">Insira seu usuário e senha!</p>
+  
+                <div class="form-outline form-white mb-4">
+                  <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                  <label class="form-label" for="typeEmailX">Usuário</label>
+                </div>
+  
+                <div class="form-outline form-white mb-4">
+                  <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                  <label class="form-label" for="typePasswordX">Senha</label>
+                </div>
+  
+                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!"></a></p>
+  
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">Entrar</button>
+  
+                <div class="d-flex justify-content-center text-center mt-4 pt-1">
+                
+                </div>
+  
+              </div>
+  
+              <div>
+                <p class="mb-0">Não possui uma conta? <a href="#!" class="text-white-50 fw-bold">Cadastre-se</a>
+                </p>
+              </div>
+  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 {% endblock %}
