--- a/app/banco/templates/banco/banco_adicionar.html
+++ b/app/banco/templates/banco/banco_adicionar.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags  %}
 {% load static %}
-<!DOCTYPE html>
 
 {% block content %}
-    <link rel="stylesheet" href="{% static '/css/banco/agencia_banco_add.css' %}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static '/css/banco/agencia_banco_add.css' %}">
     
 <section id="main">
     <h1>Adicione um banco</h1>
