--- a/app/banco/templates/usuario/login.html
+++ b/app/banco/templates/usuario/login.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% load static %}
 {% load crispy_forms_tags  %}
+{% load static %}
 {% block content %}
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static '/css/usuario/login_cadastro.css' %}">
 
@@ -13,20 +14,30 @@
             <div class="card-body p-5 text-center">
   
               <div class="mb-md-5 mt-md-4 pb-5">
+                <form action="" method="POST">
+                  {% csrf_token %}
+                    <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+                    <p class="text-white-50 mb-5">Insira seu usuário e a sua senha!</p>
   
-                <h2 class="fw-bold mb-2 text-uppercase">Entrar</h2>
-                <p class="text-white-50 mb-5">Insira seu usuário e senha!</p>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="email" id="typeEmailX" class="form-control form-control-lg" />
-                  <label class="form-label" for="typeEmailX">Usuário</label>
+                    <div class="form-outline form-white mb-4">
+                    <div id="div_id_username" class="control-group">
+                        <div class="controls">
+                            <input class="form-control form-control-lg" id="id_username"  name="username" required="required" type="text" />
+                        </div>
+                        <label for="id_username" class="control-label">Usuário</label>
+                    </div>
                 </div>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="password" id="typePasswordX" class="form-control form-control-lg" />
-                  <label class="form-label" for="typePasswordX">Senha</label>
+
+                    <div class="form-outline form-white mb-4">
+                    <div id="div_id_password1" class="control-group">
+                        <div class="controls">
+                            <input class="form-control form-control-lg" id="id_password1" maxlength="254" name="password1" required="required" type="password" />
+                        </div>
+                        <label for="id_password1" class="control-label">Senha</label>
+                    </div>
                 </div>
-  
+
+
                 <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!"></a></p>
   
                 <button class="btn btn-outline-light btn-lg px-5" type="submit">Entrar</button>
@@ -34,11 +45,11 @@
                 <div class="d-flex justify-content-center text-center mt-4 pt-1">
                 
                 </div>
-  
+                </form>
               </div>
   
               <div>
-                <p class="mb-0">Não possui uma conta? <a href="#!" class="text-white-50 fw-bold">Cadastre-se</a>
+                <p class="mb-0">Não possui uma conta? <a href="{% url 'paginaCadastro' %}" class="text-white-50 fw-bold">Entrar</a>
                 </p>
               </div>
   
@@ -49,5 +60,6 @@
     </div>
   </section>
 
-
 {% endblock %}
+
+
