--- a/app/banco/templates/usuario/registro.html
+++ b/app/banco/templates/usuario/registro.html
@@ -1,7 +1,81 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags  %}
+{% load static %}
 {% block content %}
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static '/css/usuario/login_cadastro.css' %}">
+
+<section class="vh-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+            <div class="card-body p-5 text-center">
+  
+              <div class="mb-md-5 mt-md-4 pb-5">
+                <form action="" method="POST">
+                  {% csrf_token %}
+                    <h2 class="fw-bold mb-2 text-uppercase">Cadastro</h2>
+                    <p class="text-white-50 mb-5">Cadastre-se para acessar nosso sistema</p>
+  
+                    <div class="form-outline form-white mb-4">
+                    <div id="div_id_username" class="control-group">
+                        <div class="controls">
+                            <input class="form-control form-control-lg" id="id_username"  name="username" required="required" type="text" />
+                        </div>
+                        <label for="id_username" class="control-label">Usuário</label>
+                    </div>
+                </div>
+
+                    <div class="form-outline form-white mb-4">
+                    <div id="div_id_email" class="control-group">
+                        <div class="controls">
+                            <input class="form-control form-control-lg" id="id_email" maxlength="254" name="email" required="required" type="email" />
+                        </div>
+                        <label for="id_email" class="control-label">Email</label>
+                    </div>
+                </div>
+
+                    <div class="form-outline form-white mb-4">
+                    <div id="div_id_password1" class="control-group">
+                        <div class="controls">
+                            <input class="form-control form-control-lg" id="id_password1" maxlength="254" name="password1" required="required" type="password" />
+                        </div>
+                        <label for="id_password1" class="control-label">Senha</label>
+                    </div>
+                </div>
+
+                    <div class="form-outline form-white mb-4">
+                        <div id="div_id_password2" class="control-group">
+                            <div class="controls">
+                                <input class="form-control form-control-lg" id="id_password2" maxlength="254" name="password2" required="required" type="password" />
+                            </div>
+                            <label for="id_password2" class="control-label">Confirmar Senha</label>
+                        </div>
+                    </div> 
+
+                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!"></a></p>
+  
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">Cadastrar</button>
+  
+                <div class="d-flex justify-content-center text-center mt-4 pt-1">
+                
+                </div>
+                </form>
+              </div>
+  
+              <div>
+                <p class="mb-0">Possui uma conta? <a href="{% url 'paginaLogin' %}" class="text-white-50 fw-bold">Entrar</a>
+                </p>
+              </div>
+  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 {% endblock %}
 
