--- a/app/banco/templates/usuario/registro.html
+++ b/app/banco/templates/usuario/registro.html
@@ -22,38 +22,13 @@
                     <div class="form-outline form-white mb-4">
                     <div id="div_id_username" class="control-group">
                         <div class="controls">
-                            <input class="form-control form-control-lg" id="id_username"  name="username" required="required" type="text" />
+                          {{ form|crispy}}
                         </div>
-                        <label for="id_username" class="control-label">Usuário</label>
+                       
                     </div>
                 </div>
 
-                    <div class="form-outline form-white mb-4">
-                    <div id="div_id_email" class="control-group">
-                        <div class="controls">
-                            <input class="form-control form-control-lg" id="id_email" maxlength="254" name="email" required="required" type="email" />
-                        </div>
-                        <label for="id_email" class="control-label">Email</label>
-                    </div>
-                </div>
-
-                    <div class="form-outline form-white mb-4">
-                    <div id="div_id_password1" class="control-group">
-                        <div class="controls">
-                            <input class="form-control form-control-lg" id="id_password1" maxlength="254" name="password1" required="required" type="password" />
-                        </div>
-                        <label for="id_password1" class="control-label">Senha</label>
-                    </div>
-                </div>
-
-                    <div class="form-outline form-white mb-4">
-                        <div id="div_id_password2" class="control-group">
-                            <div class="controls">
-                                <input class="form-control form-control-lg" id="id_password2" maxlength="254" name="password2" required="required" type="password" />
-                            </div>
-                            <label for="id_password2" class="control-label">Confirmar Senha</label>
-                        </div>
-                    </div> 
+                   
 
                 <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!"></a></p>
   
