--- a/app/banco/templates/banco/banco_adicionar.html
+++ b/app/banco/templates/banco/banco_adicionar.html
@@ -6,15 +6,46 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static '/css/banco/agencia_banco_add.css' %}">
     
-<section id="main">
-    <h1>Adicione um banco</h1>
-    <form action="." class="crispy_form" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-            <div class="w-25 p-3" style="background-color: #fff;">
-                {{ form|crispy }} 
+<section class="vh-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+            <div class="card-body p-5 text-center">
+  
+              <div class="mb-md-5 mt-md-4 pb-5">
+                <form action="" method="POST">
+                  {% csrf_token %}
+                    <h2 class="fw-bold mb-2 text-uppercase">Cadastrar Banco</h2>
+                    <p class="text-white-50 mb-5">Cadastre um banco em nosso sistema</p>
+  
+                    <div class="form-outline form-white mb-4">
+                    <div id="div_id_username" class="control-group">
+                        <div class="controls">
+                          {{ form|crispy}}
+                        </div>
+                       
+                    </div>
+                </div>
+
+                   
+
+                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!"></a></p>
+  
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">Salvar</button>
+  
+              
+                </form>
+              </div>
+  
+             
+  
             </div>
-        <input type="submit" class="btn btn-primary btn-sm" value="Salvar"></input>
-    </form>
-</section>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
     
 {% endblock %}
