--- a/app/banco/templates/partials/header.html
+++ b/app/banco/templates/partials/header.html
@@ -30,7 +30,23 @@
             </ul>
            
       </div>
-      <a class="navbar-brand" href="{% url 'paginaLogin' %}"><i class="bi bi-person"></i></a>
+      <div id="navbarNavDarkDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person"></i></a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+            {% if not user.is_authenticated %}
+              <li><a class="dropdown-item" href="{% url 'paginaLogin' %}">Login</a></li>
+
+            {% endif %}
+              
+            {% if user.is_authenticated %}
+              <li><a class="dropdown-item" href="{% url 'paginaDesconectar' %}">Sair</a></li>
+            {% endif %}
+          </ul>
+        </li>
+      </ul>
+      </div>
     </div>
   </nav>
 </header>
