--- a/app/static/css/partials/header.css
+++ b/app/static/css/partials/header.css
@@ -14,7 +14,7 @@
 
 #menu-h ul li a {
     color: #8f9094;
-    padding: 1.25rem;
+    padding: 0.53rem;
     display: inline-block;
     text-decoration: none;
     transition: background .4s;
@@ -33,9 +33,6 @@
     color: #5ADBDB
 }
 
-.navbar-brand .bi-person{
-    color: #8f9094;
-}
-.navbar-brand .bi-person:hover{
+.dropdown-toggle{
     color: #5ADBDB
 }
