--- a/app/banco/templates/banco/banco_list.html
+++ b/app/banco/templates/banco/banco_list.html
@@ -9,7 +9,8 @@
   
     <ul>
       {% if bancos %}
-      <table class="table">
+      <div class="row justify-content-center">
+      <table class="table table-dark table-hover table-bordered">
         <thead>
           <tr>
             <th scope="col">Id</th>
@@ -56,7 +57,7 @@
       </span>
 
     </div>
-  
+  </div>
 </div>
 
 {% endblock  %}
