--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -8,7 +8,9 @@
     <div id="main"> 
         <ul>
             {% if agencias %}
-            <table class="table table-hover">
+            <div class="row justify-content-center">
+              
+            <table class="table table-dark table-hover table-bordered">
                 <thead>
                   <tr>
                     <th scope="col">Id</th>
@@ -65,7 +67,8 @@
                 <a href="?page={{agencias.next_page_number}}"> <i class="bi bi-arrow-right-circle"></i></a>
               {% endif %}
             </span>
-      
+   
+        </div>
           </div>
     </div>
     {% endblock  %}
