--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -9,7 +9,7 @@
         <ul>
             {% if agencias %}
             <div class="row justify-content-center">
-              
+          
             <table class="table table-dark table-hover table-bordered">
                 <thead>
                   <tr>
@@ -71,4 +71,7 @@
         </div>
           </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="{% static '/js/script_agencia.js' %}"></script>
     {% endblock  %}
