--- a/app/banco/templates/banco/agencia_adicionar.html
+++ b/app/banco/templates/banco/agencia_adicionar.html
@@ -10,15 +10,8 @@
       <form action="." method="POST">
         {% csrf_token %}
         <div class="w-50 p-3" width='w'>
-          <label for="id_banco_id" class="control-label">Banco</label>
-          <div class="form-outline form-white mb-4"> 
-                <input class="form-control" name="banco_id" required="required" type="text" list="bancolist" />
-                <datalist id="bancolist">
-                  {% for result in bancos %}
-                    <option value="{{result.nome}}"></option>
-                  {% endfor %}
-                </datalist>
-                </div>
+          {{ form.id_banco|as_crispy_field }}
+                
           <div class="row"> 
             <div class="col">
               {{ form.agencia|as_crispy_field }}
@@ -48,5 +41,6 @@
       </form>
   </section>
   
-
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 {% endblock %}
