--- a/app/banco/templates/banco/agencia_list.html
+++ b/app/banco/templates/banco/agencia_list.html
@@ -3,13 +3,20 @@
 
 
 {% block content %}
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static '/css/banco/agencia_banco_list.css' %}">
     <div id="main"> 
+      {% if agencias %}
+      <div class="row justify-content-center">
+        <div class="col-9 search-div">
+          <form method="GET" id="search-form">
+            <input class="form-control" type="text" id="search" name="search" placeholder="Digite seu banco aqui">
+            <i class="fas fa-search" id="search-btn"></i>
+          </form>
+        </div>
         <ul>
-            {% if agencias %}
-            <div class="row justify-content-center">
-          
+
             <table class="table table-dark table-hover table-bordered">
                 <thead>
                   <tr>
@@ -59,9 +66,12 @@
                 <a href="?page={{agencias.previous_page_number}}"> <i class="bi bi-arrow-left-circle"></i></a>
               {% endif %}
 
+                {% if agencias.paginator.num_pages %}
                 <span class="current">
                   {{agencias.number}} de {{ agencias.paginator.num_pages}}
                 </span>
+                {% endif %}
+
       
               {% if agencias.has_next %}
                 <a href="?page={{agencias.next_page_number}}"> <i class="bi bi-arrow-right-circle"></i></a>
@@ -71,7 +81,9 @@
         </div>
           </div>
     </div>
+
+    
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="{% static '/js/script_agencia.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> 
+    <script src="{% static '/js/script_agencia.js' %}"></script>
     {% endblock  %}
