--- a/app/banco/templates/banco/agencia_adicionar.html
+++ b/app/banco/templates/banco/agencia_adicionar.html
@@ -10,7 +10,7 @@
       <form action="." method="POST">
         {% csrf_token %}
         <div class="w-50 p-3" width='w'>
-          {{ form.id_banco|as_crispy_field }}
+          {{ form.banco|as_crispy_field }}
                 
           <div class="row"> 
             <div class="col">
@@ -27,6 +27,7 @@
           </div>
           <div class="col">
             {{ form.tipo|as_crispy_field }}
+            
           </div>
         </div>
         <div class="row">
