--- a/app/banco/templates/partials/header.html
+++ b/app/banco/templates/partials/header.html
@@ -7,7 +7,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu-h">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'paginaInicial' %}"><i class="bi bi-house"></i></a>
+      <a class="navbar-brand" href="{% url 'paginaInicial' %}"><i class="fas fa-house"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation"></button>
 
       <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
@@ -33,7 +33,7 @@
       <div id="navbarNavDarkDropdown">
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person"></i></a>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user"></i></a>
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
             {% if not user.is_authenticated %}
               <li><a class="dropdown-item" href="{% url 'paginaLogin' %}">Login</a></li>
@@ -41,6 +41,7 @@
             {% endif %}
               
             {% if user.is_authenticated %}
+              <li><a class="dropdown-item" href="{% url 'paginaGerenciar' %}">Gerenciar</a></li>
               <li><a class="dropdown-item" href="{% url 'paginaDesconectar' %}">Sair</a></li>
             {% endif %}
           </ul>
